--- a/results.html
+++ b/results.html
@@ -99,11 +99,10 @@
         }
         #share-card-image-wrapper {
             background-color: #e5e7eb; display: flex; align-items: center; justify-content: center;
-            aspect-ratio: 1179 / 1572; /* Keep aspect ratio */
-            position: relative;
+            position: relative; width: 100%;
         }
         #share-card-image-wrapper.no-image #share-card-pagination { display: none; }
-        #share-card-image { width: 100%; height: 100%; object-fit: cover; }
+        #share-card-image { width: 100%; height: auto; object-fit: contain; }
         #share-card-pagination {
             position: absolute;
             bottom: 12px;
